# idleclaw

./: .gitignore  CONTRIBUTING.md  README.md  deploy-seed.sh  deploy.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
deploy/: Caddyfile  idleclaw-frontend.service  idleclaw-node.service  idleclaw-server.service  seed-cloud-init.yaml  seed-setup.sh
docs/: decentralized-ai-inference-summary.md  implementation-plan.md
frontend/: next.config.ts  package-lock.json  package.json
node-agent/: .env.example  README.md  pyproject.toml
node-agent/src/: config.py  connection.py  main.py  ollama_bridge.py  rate_limiter.py
node-agent/tests/: test_sanitization.py
scripts/: verify-seed-network.sh
security/: SECURITY.md
server/: .env.example  pyproject.toml
server/src/: config.py  main.py
server/src/middleware/: rate_limiter.py
server/src/models/: chat.py  node.py
server/src/routers/: admin.py  chat.py  health.py  metrics.py  nodes.py
server/src/services/: content_filter.py  nlp_classifier.py  node_connection.py  node_prober.py  ollama_params.py  registry.py  router.py  stats.py  tool_execution.py  tool_parser.py  tool_rate_limiter.py  tool_registry.py
server/src/services/tools/: web_search.py
server/src/ws/: node_handler.py
server/tests/: test_chat_hardening.py  test_content_filter.py  test_content_filter_nlp.py  test_nlp_classifier.py  test_node_output_hardening.py  test_node_prober.py  test_ollama_params.py  test_reputation.py  test_security_hardening.py
skill/: SKILL.md
(+55 files in other folders)
